@@ -31,7 +31,8 @@ public enum ErrorEnum {
 			-54000), SYS_SPEC_COLL_NOT_IN_CACHE(-55000), SYS_SPEC_COLL_OBJ_NOT_EXIST(
 			-56000), SYS_REG_OBJ_IN_SPEC_COLL(-57000), SYS_DEST_SPEC_COLL_SUB_EXIST(
 			-58000), SYS_SRC_DEST_SPEC_COLL_CONFLICT(-59000), SYS_UNKNOWN_SPEC_COLL_CLASS(
-			-60000), COLLECTION_NOT_EMPTY(-79000), USER_AUTH_SCHEME_ERR(-300000), USER_AUTH_STRING_EMPTY(
+			-60000), COLLECTION_NOT_EMPTY(-79000), FEDERATED_ZONE_NOT_AVAILABLE(
+			-92111), USER_AUTH_SCHEME_ERR(-300000), USER_AUTH_STRING_EMPTY(
 			-301000), USER_RODS_HOST_EMPTY(-302000), USER_RODS_HOSTNAME_ERR(
 			-303000), USER_SOCK_OPEN_ERR(-304000), USER_SOCK_CONNECT_ERR(
 			-305000), USER_STRLEN_TOOLONG(-306000), USER_API_INPUT_ERR(-307000), USER_PACKSTRUCT_INPUT_ERR(
@@ -146,8 +147,8 @@ public enum ErrorEnum {
 	}
 
 	public static ErrorEnum valueOf(final int i) {
-		int baseError = i - (i % 1000);
-		switch (baseError) {
+
+		switch (i) {
 		/**
 		 * Error Codes
 		 */
@@ -273,6 +274,8 @@ public enum ErrorEnum {
 			return SYS_UNKNOWN_SPEC_COLL_CLASS;
 		case -79000:
 			return COLLECTION_NOT_EMPTY;
+		case -92111:
+			return FEDERATED_ZONE_NOT_AVAILABLE;
 		case -300000:
 			return USER_AUTH_SCHEME_ERR;
 		case -301000:
